[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/World/Bed.gd" type="Script" id=1]
[ext_resource path="res://UI/DialogPanel.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 66 )

[node name="Bed" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 44, 66 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 87.0
margin_bottom = 37.0
color = Color( 0.490196, 0.439216, 0.443137, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_top = 30.0
margin_right = 87.0
margin_bottom = 132.0
color = Color( 0.223529, 0.470588, 0.658824, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 18.0
margin_right = 83.0
margin_bottom = 47.0
color = Color( 0.87451, 0.964706, 0.960784, 1 )

[node name="DialogPanel" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -91.0478, -112.295 )
width = 300.0
height = 100.0
[connection signal="body_entered" from="." to="." method="_on_Bed_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bed_body_exited"]
